--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@aws-sdk/client-s3-control": "^3.896.0",
     "@google-cloud/text-to-speech": "^6.3.0",
-    "@supabase/supabase-js": "^2.57.4",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.1.11"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
